# claude-code-research-transcript-hook

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
ai_transcripts/: .session_manifest.json  CATALOG.json
ai_transcripts/2026-01-14-cli-manual-invocation-test/: .title  index.html  page-001.html  page-002.html  page-003.html  session.meta.json
ai_transcripts/2026-01-14-stdin-hook-mode-test/: .last_size  .title  index.html  page-001.html  page-002.html  page-003.html  raw-transcript.jsonl  session.meta.json
ai_transcripts/2026-01-15-fix-cli-auto-discovery-for-transcript-archiving/: .title  index.html  page-001.html  page-002.html  page-003.html  page-004.html  raw-transcript.jsonl  session.meta.json
ai_transcripts/2026-01-15-three-ps-cli-arguments-and-interactive-archiving/: .last_size  .title  8b2825a0-94a1-4870-8e8f-5d9191e445e6.jsonl  index.html  page-001.html  page-002.html  page-003.html  page-004.html  session.meta.json
ai_transcripts/2026-02-05-add-markdownpdf-export-and-plugin-structure/: .title  conversation.md  index.html  page-001.html  page-002.html  page-003.html  page-004.html  raw-transcript.jsonl  session.meta.json
ai_transcripts/2026-02-05-add-markdownpdf-export-and-plugin-structure/plans/: dynamic-stirring-bunny.md
claude-commands/: transcript.md
commands/: transcript.md
docs/: dependency-rationale.md
docs/design-plans/: 2026-04-12-transcript-archive-v2.md
docs/implementation-plans/2026-04-12-transcript-archive-v2/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
example-hooks/: settings.local.json
skills/transcript/: SKILL.md
src/claude_transcript_archive/: __init__.py  __main__.py  archive.py  catalog.py  cli.py  discovery.py  metadata.py  output.py
tests/: __init__.py  conftest.py  test_archive.py  test_bulk.py  test_catalog.py  test_clean.py  test_cli.py  test_discovery.py  test_init.py  test_integration.py  test_metadata.py  test_normalise.py  test_output.py  test_regenerate.py  test_status.py  test_tags_purpose.py  test_update.py
